# template-rust

./: .dockerignore  .editorconfig  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  rustfmt.toml
.agents/skills/: architecture.md  code-quality.md  security-performance.md  testing.md  version-control.md
.cargo/: config.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.weblapp/: template.json
src/: config.rs  db.rs  error.rs  lib.rs  main.rs  state.rs
src/domain/: mod.rs
src/extractors/: claims.rs  json.rs  mod.rs
src/middleware/: auth.rs
src/routes/: health.rs  mod.rs
tests/: health_test.rs
tests/common/: mod.rs
